United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6860920 serialize.cpp shouldn't use objArrayOopDesc::base_offset_in_bytes(T_BYTE)
6860920 : serialize.cpp shouldn't use objArrayOopDesc::base_offset_in_bytes(T_BYTE)

Details
Type:
Bug
Submit Date:
2009-07-15
Status:
Closed
Updated Date:
2010-07-29
Project Name:
JDK
Resolved Date:
2010-01-15
Component:
hotspot
OS:
generic
Sub-Component:
runtime
CPU:
generic
Priority:
P5
Resolution:
Fixed
Affected Versions:
hs16
Fixed Versions:
hs16

Related Reports
Backport:
Backport:

Sub Tasks

Description
serialize.cpp currently uses objArrayOopDesc::base_offset_in_bytes(T_BYTE), which seems to be wrong.  Since objArrayOopDesc can only store oops, the only valid type is T_OBJECT.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/94b6d06fd759
                                     
2009-08-10
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/94b6d06fd759
                                     
2009-07-27
SUGGESTED FIX

Add objArrayOopDesc::base_offset_in_bytes(), which calls arrayOopDesc::base_offset_in_bytes(T_OBJECT), as similarily done with base().
                                     
2009-07-15



Hardware and Software, Engineered to Work Together